# pathtracer

./: .clang-format  CMakeLists.txt  CMakeSettings.json  TODO.md  boundingbox.h  camera.h  hit.h  mat44.h  material.h  mesh.cc  mesh.h  pathtracer.cpp  primitive.h  ray.h  renderer.cc  renderer.h  scene.h  sphere.cc  sphere.h  vec3.cc  vec3.h
tests/: CMakeLists.txt  boxTests.cpp  sphereRayIntersectionTests.cpp  vec3Tests.cpp
util/: concurrent.h
